--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -69,7 +69,7 @@ body {
     font-weight: 400;
     line-height: 1.5;
     color: #ad3989;
-    text-align: left;
+    text-align: justify;
     background-color: #fff
 }
 
