--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -19,8 +19,8 @@
     --white: #fff;
     --gray: #8fa7c2;
     --gray-dark: #537499;
-    --primary: #2A4D6F;
-    --secondary: #415b78;
+    --primary: #112A43;
+    --secondary: #112A43;
     --success: #28a745;
     --info: #17a2b8;
     --warning: #ffc107;
@@ -168,13 +168,13 @@ sup {
 }
 
 a {
-    color: #2A4D6F;
+    color: #112A43;
     text-decoration: none;
     background-color: transparent
 }
 
 a:hover {
-    color: #065b86;
+    color: #112A43;
     text-decoration: underline
 }
 
@@ -2479,36 +2479,36 @@ fieldset:disabled a.btn {
 
 .btn-primary {
     color: #fff;
-    background-color: #2A4D6F;
-    border-color: #2A4D6F
+    background-color: #112A43;
+    border-color: #112A43
 }
 
 .btn-primary:hover {
     color: #fff;
-    background-color: #0774aa;
-    border-color: #076c9e
+    /*background-color: #0774aa;*/
+    /*border-color: #112A43*/
 }
 
 .btn-primary:focus,
 .btn-primary.focus {
     color: #fff;
     background-color: #0774aa;
-    border-color: #076c9e;
+    border-color: #112A43;
     box-shadow: 0 0 0 .2rem rgba(46, 158, 214, 0.5)
 }
 
 .btn-primary.disabled,
 .btn-primary:disabled {
     color: #fff;
-    background-color: #2A4D6F;
-    border-color: #2A4D6F
+    background-color: #112A43;
+    border-color: #112A43
 }
 
 .btn-primary:not(:disabled):not(.disabled):active,
 .btn-primary.active:not(:disabled):not(.disabled),
 .show>.btn-primary.dropdown-toggle {
     color: #fff;
-    background-color: #076c9e;
+    background-color: #112A43;
     border-color: #066392
 }
 
@@ -2520,14 +2520,15 @@ fieldset:disabled a.btn {
 
 .btn-secondary {
     color: #fff;
-    background-color: #415b78;
-    border-color: #415b78
+    background-color: #112A43;
+    border-color: #112A43
 }
 
 .btn-secondary:hover {
     color: #fff;
-    background-color: #33485f;
-    border-color: #2f4257
+    opacity: .8;
+    /*background-color: #33485f;*/
+    /*border-color: #2f4257*/
 }
 
 .btn-secondary:focus,
@@ -2541,8 +2542,8 @@ fieldset:disabled a.btn {
 .btn-secondary.disabled,
 .btn-secondary:disabled {
     color: #fff;
-    background-color: #415b78;
-    border-color: #415b78
+    background-color: #112A43;
+    border-color: #112A43
 }
 
 .btn-secondary:not(:disabled):not(.disabled):active,
@@ -2773,14 +2774,14 @@ fieldset:disabled a.btn {
 .btn-dark:hover {
     color: #fff;
     background-color: #456180;
-    border-color: #415b78
+    border-color: #112A43
 }
 
 .btn-dark:focus,
 .btn-dark.focus {
     color: #fff;
     background-color: #456180;
-    border-color: #415b78;
+    border-color: #112A43;
     box-shadow: 0 0 0 .2rem rgba(108, 137, 168, 0.5)
 }
 
@@ -2795,7 +2796,7 @@ fieldset:disabled a.btn {
 .btn-dark.active:not(:disabled):not(.disabled),
 .show>.btn-dark.dropdown-toggle {
     color: #fff;
-    background-color: #415b78;
+    background-color: #112A43;
     border-color: #3c546f
 }
 
@@ -2806,14 +2807,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-    color: #2A4D6F;
-    border-color: #2A4D6F
+    color: #112A43;
+    border-color: #112A43
 }
 
 .btn-outline-primary:hover {
     color: #fff;
-    background-color: #2A4D6F;
-    border-color: #2A4D6F
+    background-color: #112A43;
+    border-color: #112A43
 }
 
 .btn-outline-primary:focus,
@@ -2823,7 +2824,7 @@ fieldset:disabled a.btn {
 
 .btn-outline-primary.disabled,
 .btn-outline-primary:disabled {
-    color: #2A4D6F;
+    color: #112A43;
     background-color: transparent
 }
 
@@ -2831,8 +2832,8 @@ fieldset:disabled a.btn {
 .btn-outline-primary.active:not(:disabled):not(.disabled),
 .show>.btn-outline-primary.dropdown-toggle {
     color: #fff;
-    background-color: #2A4D6F;
-    border-color: #2A4D6F
+    background-color: #112A43;
+    border-color: #112A43
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus,
@@ -2842,14 +2843,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-secondary {
-    color: #415b78;
-    border-color: #415b78
+    color: #112A43;
+    border-color: #112A43
 }
 
 .btn-outline-secondary:hover {
     color: #fff;
-    background-color: #415b78;
-    border-color: #415b78
+    background-color: #112A43;
+    border-color: #112A43
 }
 
 .btn-outline-secondary:focus,
@@ -2859,7 +2860,7 @@ fieldset:disabled a.btn {
 
 .btn-outline-secondary.disabled,
 .btn-outline-secondary:disabled {
-    color: #415b78;
+    color: #112A43;
     background-color: transparent
 }
 
@@ -2867,8 +2868,8 @@ fieldset:disabled a.btn {
 .btn-outline-secondary.active:not(:disabled):not(.disabled),
 .show>.btn-outline-secondary.dropdown-toggle {
     color: #fff;
-    background-color: #415b78;
-    border-color: #415b78
+    background-color: #112A43;
+    border-color: #112A43
 }
 
 .btn-outline-secondary:not(:disabled):not(.disabled):active:focus,
@@ -3095,12 +3096,12 @@ fieldset:disabled a.btn {
 
 .btn-link {
     font-weight: 400;
-    color: #2A4D6F;
+    color: #112A43;
     text-decoration: none
 }
 
 .btn-link:hover {
-    color: #065b86;
+    color: #112A43;
     text-decoration: underline
 }
 
@@ -3402,7 +3403,7 @@ input.btn-block[type="button"] {
 .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #2A4D6F
+    background-color: #112A43
 }
 
 .dropdown-item.disabled,
@@ -3765,8 +3766,8 @@ input.btn-block[type="button"] {
 
 .custom-control-input:checked~.custom-control-label::before {
     color: #fff;
-    border-color: #2A4D6F;
-    background-color: #2A4D6F
+    border-color: #112A43;
+    background-color: #112A43
 }
 
 .custom-control-input:focus~.custom-control-label::before {
@@ -3832,8 +3833,8 @@ input.btn-block[type="button"] {
 }
 
 .custom-checkbox .custom-control-input:indeterminate~.custom-control-label::before {
-    border-color: #2A4D6F;
-    background-color: #2A4D6F
+    border-color: #112A43;
+    background-color: #112A43
 }
 
 .custom-checkbox .custom-control-input:indeterminate~.custom-control-label::after {
@@ -4064,7 +4065,7 @@ input.btn-block[type="button"] {
     width: 1rem;
     height: 1rem;
     margin-top: -.25rem;
-    background-color: #2A4D6F;
+    background-color: #112A43;
     border: 0;
     border-radius: 1rem;
     -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4097,7 +4098,7 @@ input.btn-block[type="button"] {
 .custom-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #2A4D6F;
+    background-color: #112A43;
     border: 0;
     border-radius: 1rem;
     -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4133,7 +4134,7 @@ input.btn-block[type="button"] {
     margin-top: 0;
     margin-right: .2rem;
     margin-left: .2rem;
-    background-color: #2A4D6F;
+    background-color: #112A43;
     border: 0;
     border-radius: 1rem;
     -ms-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4276,7 +4277,7 @@ input.btn-block[type="button"] {
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
     color: #fff;
-    background-color: #2A4D6F
+    background-color: #112A43
 }
 
 .nav-fill>.nav-link,
@@ -5005,14 +5006,14 @@ input.btn-block[type="button"] {
     padding: .5rem .75rem;
     margin-left: -1px;
     line-height: 1.25;
-    color: #2A4D6F;
+    color: #112A43;
     background-color: #fff;
     border: 1px solid #d1dbe6
 }
 
 .page-link:hover {
     z-index: 2;
-    color: #065b86;
+    color: #112A43;
     text-decoration: none;
     background-color: #e2e8ef;
     border-color: #d1dbe6
@@ -5038,8 +5039,8 @@ input.btn-block[type="button"] {
 .page-item.active .page-link {
     z-index: 3;
     color: #fff;
-    background-color: #2A4D6F;
-    border-color: #2A4D6F
+    background-color: #112A43;
+    border-color: #112A43
 }
 
 .page-item.disabled .page-link {
@@ -5123,13 +5124,13 @@ a.badge:focus {
 
 .badge-primary {
     color: #fff;
-    background-color: #2A4D6F
+    background-color: #112A43
 }
 
 a.badge-primary:hover,
 a.badge-primary:focus {
     color: #fff;
-    background-color: #076c9e
+    background-color: #112A43
 }
 
 a.badge-primary:focus,
@@ -5140,7 +5141,7 @@ a.badge-primary.focus {
 
 .badge-secondary {
     color: #fff;
-    background-color: #415b78
+    background-color: #112A43
 }
 
 a.badge-secondary:hover,
@@ -5248,7 +5249,7 @@ a.badge-light.focus {
 a.badge-dark:hover,
 a.badge-dark:focus {
     color: #fff;
-    background-color: #415b78
+    background-color: #112A43
 }
 
 a.badge-dark:focus,
@@ -5452,7 +5453,7 @@ a.badge-dark.focus {
     color: #fff;
     text-align: center;
     white-space: nowrap;
-    background-color: #2A4D6F;
+    background-color: #112A43;
     transition: width 0.6s ease
 }
 
@@ -5543,8 +5544,8 @@ a.badge-dark.focus {
 .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #2A4D6F;
-    border-color: #2A4D6F
+    background-color: #112A43;
+    border-color: #112A43
 }
 
 .list-group-item+.list-group-item {
@@ -6704,18 +6705,18 @@ a.close.disabled {
 }
 
 .bg-primary {
-    background-color: #2A4D6F !important
+    background-color: #112A43 !important
 }
 
 a.bg-primary:hover,
 a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-    background-color: #076c9e !important
+    background-color: #112A43 !important
 }
 
 .bg-secondary {
-    background-color: #415b78 !important
+    background-color: #112A43 !important
 }
 
 a.bg-secondary:hover,
@@ -6788,7 +6789,7 @@ a.bg-dark:hover,
 a.bg-dark:focus,
 button.bg-dark:hover,
 button.bg-dark:focus {
-    background-color: #415b78 !important
+    background-color: #112A43 !important
 }
 
 .bg-white {
@@ -6840,11 +6841,11 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-    border-color: #2A4D6F !important
+    border-color: #112A43 !important
 }
 
 .border-secondary {
-    border-color: #415b78 !important
+    border-color: #112A43 !important
 }
 
 .border-success {
@@ -9894,16 +9895,16 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-    color: #2A4D6F !important
+    color: #112A43 !important
 }
 
 a.text-primary:hover,
 a.text-primary:focus {
-    color: #065b86 !important
+    color: #112A43 !important
 }
 
 .text-secondary {
-    color: #415b78 !important
+    color: #112A43 !important
 }
 
 a.text-secondary:hover,
@@ -10103,7 +10104,7 @@ body {
     font-family: 'Roboto', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    color: #415b78
+    color: #112A43
 }
 
 h1,
@@ -10125,7 +10126,7 @@ a.theme-link {
 }
 
 a.theme-link:hover {
-    color: #2A4D6F;
+    color: #112A43;
     -webkit-text-decoration-color: rgba(9, 141, 207, 0.8);
     text-decoration-color: rgba(9, 141, 207, 0.8)
 }
@@ -10149,19 +10150,19 @@ a.theme-link:hover {
 }
 
 .btn-primary {
-    background: #2A4D6F
+    background: #112A43
 }
 
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:active,
 .btn-primary:not(:disabled):not(.disabled):active:focus {
-    background: #076c9e;
+    background: #112A43;
     box-shadow: none
 }
 
 .btn-secondary {
-    background: #f05423
+    background: #F05423
 }
 cour.btn-secondary:hover,
 .btn-secondary:focus,
@@ -10179,7 +10180,7 @@ cour.btn-secondary:hover,
 
 .btn-ghost:hover {
     background: #fff;
-    color: #2A4D6F
+    color: #112A43
 }
 
 .theme-bg-light {
@@ -10191,12 +10192,12 @@ cour.btn-secondary:hover,
 }
 
 .theme-bg-primary {
-    background: #2A4D6F
+    background: #112A43
 }
 
 #topcontrol {
     transition: all 0.4s ease-in-out;
-    background: #415b78;
+    background: #112A43;
     color: #fff;
     text-align: center;
     display: inline-block;
@@ -10217,7 +10218,7 @@ cour.btn-secondary:hover,
 }
 
 #topcontrol:hover {
-    background: #076c9e;
+    background: #112A43;
     color: #fff
 }
 
@@ -10494,14 +10495,14 @@ cour.btn-secondary:hover,
     position: absolute;
     text-shadow: none;
     color: #fff;
-    background: #2A4D6F;
+    background: #112A43;
     top: 0;
     right: 0;
     z-index: 10
 }
 
 .modal-speaker .modal-header .close:hover {
-    background: #2A4D6F;
+    background: #112A43;
     color: #fff
 }
 
@@ -10568,7 +10569,7 @@ cour.btn-secondary:hover,
     top: 5px;
     width: 16px;
     height: 16px;
-    border: 4px solid #2A4D6F;
+    border: 4px solid #112A43;
     background: white;
     border-radius: 50%
 }
@@ -10586,7 +10587,7 @@ cour.btn-secondary:hover,
 
 .schedule-tab-content .item .meta .time {
     font-size: 1.25rem;
-    color: #2A4D6F
+    color: #112A43
 }
 
 .schedule-tab-content .item .meta .location {
@@ -10615,7 +10616,7 @@ cour.btn-secondary:hover,
     width: 42px;
     height: 42px;
     background: #f0f6fa;
-    color: #2A4D6F;
+    color: #112A43;
     display: inline-block;
     text-align: center;
     border-radius: 50%;
@@ -10632,7 +10633,7 @@ cour.btn-secondary:hover,
 }
 
 .pricing .heading {
-    background: #2A4D6F;
+    background: #112A43;
     color: #fff
 }
 
