--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -543,7 +543,7 @@ kbd {
     padding: .2rem .4rem;
     font-size: 87.5%;
     color: #fff;
-    background-color: #ad3989;
+    background-color: #5A1E5B;
     border-radius: .2rem
 }
 
@@ -556,7 +556,7 @@ kbd kbd {
 pre {
     display: block;
     font-size: 87.5%;
-    color: #ad3989
+    color: #5A1E5B
 }
 
 pre code {
@@ -1584,7 +1584,7 @@ pre code {
 .table {
     width: 100%;
     margin-bottom: 1rem;
-    color: #ad3989
+    color: #5A1E5B
 }
 
 .table th,
@@ -1634,7 +1634,7 @@ pre code {
 }
 
 .table-hover tbody tr:hover {
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: rgba(0, 0, 0, 0.075)
 }
 
@@ -2044,7 +2044,7 @@ select.form-control:focus::-ms-value {
     margin-bottom: 0;
     font-size: 1rem;
     line-height: 1.5;
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: transparent;
     border: solid transparent;
     border-width: 1px 0
@@ -2430,7 +2430,7 @@ textarea.form-control.is-invalid {
 .btn {
     display: inline-block;
     font-weight: 400;
-    color: #ad3989;
+    color: #5A1E5B;
     text-align: center;
     vertical-align: middle;
     -webkit-user-select: none;
@@ -2453,7 +2453,7 @@ textarea.form-control.is-invalid {
 }
 
 .btn:hover {
-    color: #ad3989;
+    color: #5A1E5B;
     text-decoration: none
 }
 
@@ -2643,20 +2643,20 @@ fieldset:disabled a.btn {
 }
 
 .btn-warning {
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: #ffc107;
     border-color: #ffc107
 }
 
 .btn-warning:hover {
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: #e0a800;
     border-color: #d39e00
 }
 
 .btn-warning:focus,
 .btn-warning.focus {
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: #e0a800;
     border-color: #d39e00;
     box-shadow: 0 0 0 .2rem rgba(220, 168, 12, 0.5)
@@ -2664,7 +2664,7 @@ fieldset:disabled a.btn {
 
 .btn-warning.disabled,
 .btn-warning:disabled {
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: #ffc107;
     border-color: #ffc107
 }
@@ -2672,7 +2672,7 @@ fieldset:disabled a.btn {
 .btn-warning:not(:disabled):not(.disabled):active,
 .btn-warning.active:not(:disabled):not(.disabled),
 .show>.btn-warning.dropdown-toggle {
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: #d39e00;
     border-color: #c69500
 }
@@ -2725,20 +2725,20 @@ fieldset:disabled a.btn {
 }
 
 .btn-light {
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: #fff;
     border-color: #fff
 }
 
 .btn-light:hover {
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: #e6ecf2;
     border-color: #dee5ed
 }
 
 .btn-light:focus,
 .btn-light.focus {
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: #e6ecf2;
     border-color: #dee5ed;
     box-shadow: 0 0 0 .2rem rgba(220, 221, 222, 0.5)
@@ -2746,7 +2746,7 @@ fieldset:disabled a.btn {
 
 .btn-light.disabled,
 .btn-light:disabled {
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: #fff;
     border-color: #fff
 }
@@ -2754,7 +2754,7 @@ fieldset:disabled a.btn {
 .btn-light:not(:disabled):not(.disabled):active,
 .btn-light.active:not(:disabled):not(.disabled),
 .show>.btn-light.dropdown-toggle {
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: #dee5ed;
     border-color: #d6dfe9
 }
@@ -2956,7 +2956,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-warning:hover {
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: #ffc107;
     border-color: #ffc107
 }
@@ -2975,7 +2975,7 @@ fieldset:disabled a.btn {
 .btn-outline-warning:not(:disabled):not(.disabled):active,
 .btn-outline-warning.active:not(:disabled):not(.disabled),
 .show>.btn-outline-warning.dropdown-toggle {
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: #ffc107;
     border-color: #ffc107
 }
@@ -3028,7 +3028,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-light:hover {
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: #fff;
     border-color: #fff
 }
@@ -3047,7 +3047,7 @@ fieldset:disabled a.btn {
 .btn-outline-light:not(:disabled):not(.disabled):active,
 .btn-outline-light.active:not(:disabled):not(.disabled),
 .show>.btn-outline-light.dropdown-toggle {
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: #fff;
     border-color: #fff
 }
@@ -3215,7 +3215,7 @@ input.btn-block[type="button"] {
     padding: .5rem 0;
     margin: .125rem 0 0;
     font-size: 1rem;
-    color: #ad3989;
+    color: #5A1E5B;
     text-align: left;
     list-style: none;
     background-color: #fff;
@@ -3385,7 +3385,7 @@ input.btn-block[type="button"] {
     padding: .25rem 1.5rem;
     clear: both;
     font-weight: 400;
-    color: #ad3989;
+    color: #5A1E5B;
     text-align: inherit;
     white-space: nowrap;
     background-color: transparent;
@@ -3429,7 +3429,7 @@ input.btn-block[type="button"] {
 .dropdown-item-text {
     display: block;
     padding: .25rem 1.5rem;
-    color: #ad3989
+    color: #5A1E5B
 }
 
 .btn-group,
@@ -4369,7 +4369,7 @@ input.btn-block[type="button"] {
 
 @media only screen and (max-width: 991px) {
     .navbar-collapse {
-        background-color: #ad3989;
+        background-color: #5A1E5B;
     }
 }
 
@@ -5191,13 +5191,13 @@ a.badge-info.focus {
 }
 
 .badge-warning {
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: #ffc107
 }
 
 a.badge-warning:hover,
 a.badge-warning:focus {
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: #d39e00
 }
 
@@ -5225,13 +5225,13 @@ a.badge-danger.focus {
 }
 
 .badge-light {
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: #fff
 }
 
 a.badge-light:hover,
 a.badge-light:focus {
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: #dee5ed
 }
 
@@ -5512,7 +5512,7 @@ a.badge-dark.focus {
 }
 
 .list-group-item-action:active {
-    color: #ad3989;
+    color: #5A1E5B;
     background-color: #e2e8ef
 }
 
@@ -6420,7 +6420,7 @@ a.close.disabled {
 
 .popover-body {
     padding: .5rem .75rem;
-    color: #ad3989
+    color: #5A1E5B
 }
 
 .carousel {
@@ -9967,7 +9967,7 @@ a.text-dark:focus {
 }
 
 .text-body {
-    color: #ad3989 !important
+    color: #5A1E5B !important
 }
 
 .text-muted {
@@ -10119,7 +10119,7 @@ h6 {
 }
 
 a.theme-link {
-    color: #ad3989;
+    color: #5A1E5B;
     text-decoration: underline;
     -webkit-text-decoration-color: rgba(20, 28, 37, 0.3);
     text-decoration-color: rgba(20, 28, 37, 0.3)
@@ -10188,7 +10188,7 @@ cour.btn-secondary:hover,
 }
 
 .theme-bg-dark {
-    background: #ad3989
+    background: #5A1E5B
 }
 
 .theme-bg-primary {
@@ -10257,7 +10257,7 @@ cour.btn-secondary:hover,
 
 .header-shrink {
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1);
-    background: #ad3989
+    background: #5A1E5B
 }
 
 .navbar-nav .nav-item {
@@ -10328,7 +10328,7 @@ cour.btn-secondary:hover,
 }
 
 .hero-carousel .carousel-item {
-    background-color: #ad3989;
+    background-color: #5A1E5B;
     width: 100%;
     height: 100%
 }
@@ -10397,7 +10397,7 @@ cour.btn-secondary:hover,
 .countdown-box .number {
     font-size: 2rem;
     font-weight: 400;
-    color: #ad3989
+    color: #5A1E5B
 }
 
 .countdown-box .unit {
@@ -10807,7 +10807,7 @@ cour.btn-secondary:hover,
 
 @media (max-width: 991.98px) {
     .header-has-bg {
-        background: #ad3989
+        background: #5A1E5B
     }
 }
 
